<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.melonfishy.florabeats.RhythmResultsActivity">
    <FrameLayout
        android:background="@color/colorLightBlack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/fl_result_data">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CoolModern"
            android:gravity="center_horizontal"
            android:text="@string/rhythm_clear_results_label"
            android:textSize="48sp"
            android:layout_marginTop="50dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="120dp">
            <LinearLayout
                android:layout_width="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/CoolModern"
                    android:gravity="center_vertical|start"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/bloom_combo"
                    android:textColor="@color/colorSparkBloom"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"/>
                <TextView
                    style="@style/CoolModern"
                    android:gravity="center_vertical|end"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rhythm_clear_results_data"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/tv_bloom_count"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/CoolModern"
                    android:gravity="center_vertical|start"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/grow_combo"
                    android:textColor="@color/colorSparkGrow"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"/>
                <TextView
                    style="@style/CoolModern"
                    android:gravity="center_vertical|end"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rhythm_clear_results_data"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/tv_grow_count"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/CoolModern"
                    android:gravity="center_vertical|start"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/miss_combo"
                    android:textColor="@color/colorSparkWither"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"/>
                <TextView
                    style="@style/CoolModern"
                    android:gravity="center_vertical|end"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rhythm_clear_results_data"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/tv_miss_count"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/CoolModern"
                    android:gravity="center_vertical|start"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/score_combo"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"/>
                <TextView
                    style="@style/CoolModern"
                    android:gravity="center_vertical|end"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rhythm_clear_results_data"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/tv_score_count"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/CoolModern"
                    android:gravity="center_vertical|start"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/max_combo"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"/>
                <TextView
                    style="@style/CoolModern"
                    android:gravity="center_vertical|end"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rhythm_clear_results_data"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/tv_max_combo_count"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/CoolModern"
                    android:gravity="center"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rhythm_clear_continue_message"
                    android:textSize="22sp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/fl_result_anim"
        android:background="@color/colorSongClearNormal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CoolModern"
            android:gravity="center_horizontal"
            android:text="@string/rhythm_clear_normal"
            android:textSize="48sp"
            android:layout_marginTop="100dp"
            android:id="@+id/tv_rhythm_clear_message"/>
        <pl.droidsonroids.gif.GifImageView
            android:layout_width="320dp"
            android:layout_height="400dp"
            android:background="@drawable/sprout_song_end_clear_ex_gif"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="40dp"
            android:id="@+id/giv_rhythm_clear_anim_ex"
            android:visibility="invisible"/>
        <pl.droidsonroids.gif.GifImageView
            android:layout_width="320dp"
            android:layout_height="400dp"
            android:background="@drawable/sprout_song_end_clear_gif"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="40dp"
            android:id="@+id/giv_rhythm_clear_anim"/>
        <ImageView
            android:layout_width="730dp"
            android:layout_height="462dp"
            android:scaleY="0.5"
            android:scaleX="0.5"
            android:background="@drawable/sprout_song_fail"
            android:layout_gravity="center_horizontal|bottom"
            android:gravity="center_horizontal|bottom"
            android:layout_marginBottom="40dp"
            android:id="@+id/iv_rhythm_clear_fail"
            android:visibility="invisible"/>
    </FrameLayout>

</android.support.constraint.ConstraintLayout>
