<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.melonfishy.florabeats.RhythmPlantActivity"
    android:layout_gravity="center"
    android:background="@color/colorRhythmBackground">

    <TextView
        android:layout_marginTop="300dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tv_rhythm_score"
        style="@style/CoolModern"
        android:gravity="center"
        android:text="@string/rhythm_loading"
        android:alpha="0.04"
        android:scaleX="1.0"
        android:textSize="90sp"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fl_flower_vines">
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fl_flower_ground">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/florabeats_gnd"
            android:layout_gravity="bottom"/>
    </FrameLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cl_rhythm_plant">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="0dp">
            <LinearLayout
                android:baselineAligned="false"
                android:id="@+id/ll_flower_tier_4"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:layout_gravity="center">
            </LinearLayout>
            <LinearLayout
                android:baselineAligned="false"
                android:id="@+id/ll_flower_tier_3"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:layout_gravity="center">
            </LinearLayout>
            <LinearLayout
                android:baselineAligned="false"
                android:id="@+id/ll_flower_tier_2"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:layout_gravity="center">
            </LinearLayout>
            <LinearLayout
                android:baselineAligned="false"
                android:id="@+id/ll_flower_tier_1"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:layout_gravity="center">
            </LinearLayout>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fl_flower_fx">
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fl_flower_fx2">
    </FrameLayout>

    <TextView
        android:id="@+id/tv_ready_message"
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:textSize="80sp"
        style="@style/CoolModern"
        android:text="@string/rhythm_ready"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_difficulty_icon"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:tint="@color/colorWhite"
            android:src="@drawable/florabeats_difficulty_flower"/>
        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            style="@style/CoolModern"
            android:textStyle="bold"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/rhythm_difficulty_songname"
            android:textSize="24sp"
            android:id="@+id/tv_difficulty_songname"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center|top"
            android:gravity="center|top"
            android:id="@+id/ll_difficulty_stars">
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:visibility="invisible"
        android:id="@+id/ll_combo">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            style="@style/CoolModern"
            android:textSize="80sp"
            android:gravity="center_horizontal"
            android:text="@string/rhythm_combo"
            android:textColor="@color/colorWhiteCombo"
            android:id="@+id/tv_combo_count"
            android:alpha="0.6"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            style="@style/CoolModern"
            android:textSize="30sp"
            android:gravity="center"
            android:text="@string/rhythm_label"
            android:textColor="@color/colorWhiteCombo"
            android:id="@+id/tv_combo_label"
            android:alpha="0.6"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/fl_flower_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLightBlack"
        android:visibility="visible">
        <pl.droidsonroids.gif.GifImageView
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:id="@+id/iv_rhythm_loading"
            android:src="@drawable/sprout_loading_anim"
            android:layout_gravity="center_horizontal|bottom" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rhythm_loading"
            android:id="@+id/tv_rhythm_loading"
            style="@style/CoolModern"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLightBlackPause"
        android:id="@+id/fl_flower_pause"
        android:visibility="invisible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:text="@string/rhythm_pause_label"
            style="@style/CoolModern"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Resume"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:id="@+id/button_resume"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Quit"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:id="@+id/button_quit"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Restart"
                android:layout_gravity="center"
                android:layout_margin="8dp"/>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>
